+ Fix overflow for word cloud + Apply red font color for negative percentage on Chatter Volume + Word Cloud and Chatter Volume now has same card height

--- a/src/@shared/ui/stock-chatter-volume/stock-chatter-volume-column.component.scss
+++ b/src/@shared/ui/stock-chatter-volume/stock-chatter-volume-column.component.scss
@@ -1,4 +1,5 @@
 .StockChatterVolumeColumn {
+  $self: &;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,5 +16,9 @@
     font-weight: 500;
     margin-bottom: 20px;
     color: #5cb85c;
+  }
+
+  &-percentage#{ $self }-low {
+    color: #e24d4d;
   }
 }
