--- a/src/app/stock-display/stock-social/stock-social.component.scss
+++ b/src/app/stock-display/stock-social/stock-social.component.scss
@@ -12,4 +12,9 @@
   &-cardTitle {
     text-align: center;
   }
+
+  &-cardWrap {
+    max-height: 220px;
+    min-height: 220px;
+  }
 }
